# jokes

./: .firebaserc  .gitignore  .style.yapf  AGENTS.md  CODEX.md  HANDOVER.md  README.md  SPECS.md  download_prod_backup.cmd  download_prod_backup.ps1  firebase.json  firestore.indexes.json  firestore.rules  flutter_launcher_icons.yaml  flutter_native_splash.yaml  pubspec.yaml  pyrightconfig.json  remoteconfig.template.json  setup.sh  storage.rules  temp.dart  temp_test_log.txt
py_quill/: .gitignore  .pylintrc  deploy_joke_populator_agent.cmd  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_evaluator.sh  run_jokes.sh
py_quill/.tmp_js_checks/: checker.mjs  inline.js  inline.mjs
py_quill/agents/: __init__.py  agents_common.py  app_init.py  constants.py
py_quill/common/: amazon_redirect.py  amazon_redirect_test.py  audio_operations.py  audio_operations_test.py  audio_timing.py  book_defs.py  character_animator.py  character_animator_spec.md  character_animator_test.py  config.py  firebase_init.py  image_generation.py  image_generation_test.py  image_operations.py  image_operations_test.py  joke_book_file_operations.py  joke_book_file_operations_test.py  joke_book_operations.py  joke_book_operations_test.py  joke_category_operations.py  joke_category_operations_test.py  joke_lead_operations.py  joke_lead_operations_test.py  joke_media_operations.py  joke_media_operations_test.py  joke_notes_sheet_operations.py  joke_notes_sheet_operations_test.py  joke_operations.py  joke_operations_metadata_test.py  joke_operations_test.py  joke_state_operations.py  (+17 more)
(+782 files in other folders)
