# Activate the venv, then run `pip install -e .` to add py_quill to python path

[project]
name = "py_quill"
version = "0.1.0"

[tool.setuptools.packages.find]
where = ["."]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pylint.MAIN]
extension-pkg-allow-list = ["cv2"]
